Add authentication documentation
